# deadbeef-plugins-3rd-party

nowplaying/: .gitignore  LICENSE  Makefile.am  autogen.sh  configure.ac
nowplaying/src/: Makefile.am  nowplaying.c
