##
## Copyright (c) 2009 Alexey Smirnov <alexey.smirnov@gmx.com>
##
## See the file LICENSE for information on usage and redistribution
## of this file, and for a DISCLAMER OF ALL WARRANTIES.
##

lib_LTLIBRARIES = nowplaying.la
nowplaying_la_SOURCES = nowplaying.c
nowplaying_la_LDFLAGS = -module

AM_CFLAGS = $(CFLAGS) -std=c99
